[gd_scene load_steps=7 format=1]

[ext_resource path="res://map.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/house_in_forest.gd" type="Script" id=2]
[ext_resource path="res://tilesets/town_and_castle.tres" type="TileSet" id=3]
[ext_resource path="res://miscs/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://npcs/oldman0.tscn" type="PackedScene" id=5]
[ext_resource path="res://miscs/treasure.tscn" type="PackedScene" id=6]

[node name="Root" instance=ExtResource( 1 )]

script/script = ExtResource( 2 )

[node name="TileMap" parent="Camera"]

editor/display_folded = false
tile_set = ExtResource( 3 )
tile_data = IntArray( -65542, 2, -65541, 2, -65540, 2, -65539, 2, -65538, 2, -65537, 2, -131072, 2, -131071, 2, -131070, 2, -131069, 2, -131068, 2, -131067, 2, -131066, 2, -131065, 2, -131064, 2, -131063, 2, -131062, 2, -131061, 2, -131060, 2, -131059, 2, -131058, 2, -131057, 2, -131056, 2, -131055, 2, -131054, 2, -131053, 2, -131052, 2, -131051, 2, -131050, 2, -131049, 2, -131048, 2, -131047, 2, -6, 2, -5, 2, -4, 2, -3, 2, -2, 2, -1, 2, -65536, 2, -65535, 2, -65534, 2, -65533, 2, -65532, 2, -65531, 2, -65530, 2, -65529, 2, -65528, 2, -65527, 2, -65526, 2, -65525, 2, -65524, 2, -65523, 2, -65522, 2, -65521, 2, -65520, 2, -65519, 2, -65518, 2, -65517, 2, -65516, 2, -65515, 2, -65514, 2, -65513, 2, -65512, 2, -65511, 2, 65530, 2, 65531, 2, 65532, 2, 65533, 2, 65534, 2, 65535, 2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 10, 2, 11, 2, 12, 2, 13, 2, 14, 2, 15, 2, 16, 2, 17, 2, 18, 2, 19, 2, 20, 2, 21, 2, 22, 2, 23, 2, 24, 2, 25, 2, 131066, 2, 131067, 2, 131068, 2, 131069, 2, 131070, 2, 131071, 2, 65536, 2, 65537, 2, 65538, 2, 65539, 2, 65540, 2, 65541, 2, 65542, 2, 65543, 2, 65544, 2, 65545, 2, 65546, 2, 65547, 2, 65548, 2, 65549, 2, 65550, 2, 65551, 2, 65552, 2, 65553, 2, 65554, 2, 65555, 2, 65556, 2, 65557, 2, 65558, 2, 65559, 2, 65560, 2, 65561, 2, 196602, 2, 196603, 2, 196604, 2, 196605, 2, 196606, 2, 196607, 2, 131072, 2, 131073, 2, 131074, 2, 131075, 2, 131076, 2, 131077, 2, 131078, 2, 131079, 2, 131080, 2, 131081, 2, 131082, 2, 131083, 2, 131084, 2, 131085, 2, 131086, 2, 131087, 2, 131088, 2, 131089, 2, 131090, 2, 131091, 2, 131092, 2, 131093, 2, 131094, 2, 131095, 2, 131096, 2, 131097, 2, 262138, 2, 262139, 2, 262140, 2, 262141, 2, 262142, 2, 262143, 2, 196608, 2, 196609, 2, 196610, 2, 196611, 2, 196612, 2, 196613, 2, 196614, 2, 196615, 2, 196616, 2, 196617, 2, 196618, 2, 196619, 2, 196620, 2, 196621, 2, 196622, 2, 196623, 2, 196624, 2, 196625, 2, 196626, 2, 196627, 2, 196628, 2, 196629, 2, 196630, 2, 196631, 2, 196632, 2, 196633, 2, 327674, 2, 327675, 2, 327676, 2, 327677, 2, 327678, 2, 327679, 2, 262144, 2, 262145, 2, 262146, 2, 262147, 2, 262148, 2, 262149, 2, 262150, 2, 262151, 2, 262152, 2, 262153, 2, 262154, 2, 262155, 2, 262156, 2, 262157, 2, 262158, 3, 262159, 3, 262160, 3, 262161, 3, 262162, 2, 262163, 2, 262164, 2, 262165, 2, 262166, 2, 262167, 2, 262168, 2, 262169, 2, 393210, 2, 393211, 2, 393212, 2, 393213, 2, 393214, 2, 393215, 2, 327680, 2, 327681, 2, 327682, 2, 327683, 2, 327684, 2, 327685, 2, 327686, 2, 327687, 2, 327688, 2, 327689, 2, 327690, 2, 327691, 2, 327692, 2, 327693, 2, 327694, 3, 327695, 0, 327696, 0, 327697, 3, 327698, 2, 327699, 2, 327700, 2, 327701, 2, 327702, 2, 327703, 2, 327704, 2, 327705, 2, 458746, 2, 458747, 2, 458748, 2, 458749, 2, 458750, 2, 458751, 2, 393216, 2, 393217, 2, 393218, 2, 393219, 2, 393220, 2, 393221, 2, 393222, 2, 393223, 2, 393224, 2, 393225, 2, 393226, 2, 393227, 2, 393228, 2, 393229, 2, 393230, 3, 393231, 0, 393232, 0, 393233, 3, 393234, 2, 393235, 2, 393236, 2, 393237, 2, 393238, 2, 393239, 2, 393240, 2, 393241, 2, 524282, 2, 524283, 2, 524284, 2, 524285, 2, 524286, 2, 524287, 2, 458752, 2, 458753, 2, 458754, 2, 458755, 2, 458756, 3, 458757, 3, 458758, 3, 458759, 5, 458760, 6, 458761, 6, 458762, 6, 458763, 6, 458764, 6, 458765, 6, 458766, 6, 458767, 10, 458768, 5, 458769, 5, 458770, 2, 458771, 2, 458772, 2, 458773, 2, 458774, 2, 458775, 2, 458776, 2, 458777, 2, 589818, 2, 589819, 2, 589820, 2, 589821, 2, 589822, 2, 589823, 2, 524288, 2, 524289, 2, 524290, 2, 524291, 2, 524292, 3, 524293, 3, 524294, 3, 524295, 5, 524296, 22, 524297, 23, 524298, 10, 524299, 10, 524300, 21, 524301, 20, 524302, 20, 524303, 10, 524304, 6, 524305, 5, 524306, 2, 524307, 2, 524308, 2, 524309, 2, 524310, 2, 524311, 2, 524312, 2, 524313, 2, 655354, 2, 655355, 2, 655356, 2, 655357, 2, 655358, 2, 655359, 2, 589824, 2, 589825, 2, 589826, 3, 589827, 3, 589828, 1, 589829, 1, 589830, 1, 589831, 5, 589832, 10, 589833, 10, 589834, 10, 589835, 10, 589836, 10, 589837, 10, 589838, 19, 589839, 10, 589840, 10, 589841, 5, 589842, 2, 589843, 2, 589844, 2, 589845, 2, 589846, 2, 589847, 2, 589848, 2, 589849, 2, 720890, 2, 720891, 2, 720892, 2, 720893, 2, 720894, 2, 720895, 2, 655360, 2, 655361, 2, 655362, 3, 655363, 3, 655364, 1, 655365, 1, 655366, 0, 655367, 5, 655368, 10, 655369, 11, 655370, 13, 655371, 10, 655372, 10, 655373, 10, 655374, 10, 655375, 10, 655376, 5, 655377, 5, 655378, 2, 655379, 2, 655380, 2, 655381, 2, 655382, 2, 655383, 2, 655384, 2, 655385, 2, 786426, 2, 786427, 2, 786428, 2, 786429, 2, 786430, 2, 786431, 2, 720896, 2, 720897, 2, 720898, 3, 720899, 3, 720900, 1, 720901, 0, 720902, 0, 720903, 5, 720904, 10, 720905, 10, 720906, 10, 720907, 10, 720908, 10, 720909, 10, 720910, 10, 720911, 10, 720912, 5, 720913, 5, 720914, 2, 720915, 2, 720916, 2, 720917, 2, 720918, 2, 720919, 2, 720920, 2, 720921, 2, 851962, 2, 851963, 2, 851964, 2, 851965, 2, 851966, 2, 851967, 2, 786432, 2, 786433, 2, 786434, 2, 786435, 2, 786436, 0, 786437, 0, 786438, 0, 786439, 5, 786440, 10, 786441, 10, 786442, 10, 786443, 10, 786444, 10, 786445, 10, 786446, 10, 786447, 10, 786448, 5, 786449, 5, 786450, 2, 786451, 2, 786452, 2, 786453, 2, 786454, 2, 786455, 2, 786456, 2, 786457, 2, 917498, 2, 917499, 2, 917500, 2, 917501, 2, 917502, 2, 917503, 2, 851968, 2, 851969, 2, 851970, 2, 851971, 2, 851972, 0, 851973, 0, 851974, 0, 851975, 5, 851976, 10, 851977, 10, 851978, 10, 851979, 10, 851980, 10, 851981, 10, 851982, 15, 851983, 16, 851984, 5, 851985, 5, 851986, 2, 851987, 2, 851988, 2, 851989, 2, 851990, 2, 851991, 2, 851992, 2, 851993, 2, 983034, 2, 983035, 2, 983036, 2, 983037, 2, 983038, 2, 983039, 2, 917504, 2, 917505, 2, 917506, 2, 917507, 2, 917508, 0, 917509, 0, 917510, 0, 917511, 6, 917512, 6, 917513, 10, 917514, 6, 917515, 6, 917516, 6, 917517, 6, 917518, 6, 917519, 6, 917520, 6, 917521, 6, 917522, 2, 917523, 2, 917524, 2, 917525, 2, 917526, 2, 917527, 2, 917528, 2, 917529, 2, 1048570, 2, 1048571, 2, 1048572, 2, 1048573, 2, 1048574, 2, 1048575, 2, 983040, 2, 983041, 2, 983042, 2, 983043, 2, 983044, 0, 983045, 0, 983046, 0, 983047, 0, 983048, 0, 983049, 0, 983050, 1, 983051, 1, 983052, 3, 983053, 3, 983054, 2, 983055, 2, 983056, 2, 983057, 2, 983058, 2, 983059, 2, 983060, 2, 983061, 2, 983062, 2, 983063, 2, 983064, 2, 983065, 2, 1114106, 2, 1114107, 2, 1114108, 2, 1114109, 2, 1114110, 2, 1114111, 2, 1048576, 2, 1048577, 2, 1048578, 2, 1048579, 2, 1048580, 1, 1048581, 1, 1048582, 0, 1048583, 0, 1048584, 0, 1048585, 1, 1048586, 1, 1048587, 1, 1048588, 3, 1048589, 3, 1048590, 2, 1048591, 2, 1048592, 2, 1048593, 2, 1048594, 2, 1048595, 2, 1048596, 2, 1048597, 2, 1048598, 2, 1048599, 2, 1048600, 2, 1048601, 2, 1179642, 2, 1179643, 2, 1179644, 2, 1179645, 2, 1179646, 2, 1179647, 2, 1114112, 2, 1114113, 2, 1114114, 2, 1114115, 2, 1114116, 1, 1114117, 1, 1114118, 0, 1114119, 0, 1114120, 1, 1114121, 3, 1114122, 2, 1114123, 2, 1114124, 2, 1114125, 2, 1114126, 2, 1114127, 2, 1114128, 2, 1114129, 2, 1114130, 2, 1114131, 2, 1114132, 2, 1114133, 2, 1114134, 2, 1114135, 2, 1114136, 2, 1114137, 2, 1245178, 2, 1245179, 2, 1245180, 2, 1245181, 2, 1245182, 2, 1245183, 2, 1179648, 2, 1179649, 2, 1179650, 2, 1179651, 2, 1179652, 3, 1179653, 3, 1179654, 1, 1179655, 1, 1179656, 3, 1179657, 3, 1179658, 2, 1179659, 2, 1179660, 2, 1179661, 2, 1179662, 2, 1179663, 2, 1179664, 2, 1179665, 2, 1179666, 2, 1179667, 2, 1179668, 2, 1179669, 2, 1179670, 2, 1179671, 2, 1179672, 2, 1179673, 2, 1310714, 2, 1310715, 2, 1310716, 2, 1310717, 2, 1310718, 2, 1310719, 2, 1245184, 2, 1245185, 2, 1245186, 2, 1245187, 2, 1245188, 3, 1245189, 3, 1245190, 1, 1245191, 1, 1245192, 3, 1245193, 2, 1245194, 2, 1245195, 2, 1245196, 2, 1245197, 2, 1245198, 2, 1245199, 2, 1245200, 2, 1245201, 2, 1245202, 2, 1245203, 2, 1245204, 2, 1245205, 2, 1245206, 2, 1245207, 2, 1245208, 2, 1245209, 2, 1376250, 2, 1376251, 2, 1376252, 2, 1376253, 2, 1376254, 2, 1376255, 2, 1310720, 2, 1310721, 2, 1310722, 2, 1310723, 2, 1310724, 2, 1310725, 2, 1310726, 1, 1310727, 1, 1310728, 2, 1310729, 2, 1310730, 2, 1310731, 2, 1310732, 2, 1310733, 2, 1310734, 2, 1310735, 2, 1310736, 2, 1310737, 2, 1310738, 2, 1310739, 2, 1310740, 2, 1310741, 2, 1310742, 2, 1310743, 2, 1310744, 2, 1310745, 2, 1441786, 2, 1441787, 2, 1441788, 2, 1441789, 2, 1441790, 2, 1441791, 2, 1376256, 2, 1376257, 2, 1376258, 2, 1376259, 2, 1376260, 2, 1376261, 2, 1376262, 1, 1376263, 1, 1376264, 2, 1376265, 2, 1376266, 2, 1376267, 2, 1376268, 2, 1376269, 2, 1376270, 2, 1376271, 2, 1376272, 2, 1376273, 2, 1376274, 2, 1376275, 2, 1376276, 2, 1376277, 2, 1376278, 2, 1376279, 2, 1376280, 2, 1376281, 2, 1507322, 2, 1507323, 2, 1507324, 2, 1507325, 2, 1507326, 2, 1507327, 2, 1441792, 2, 1441793, 2, 1441794, 2, 1441795, 2, 1441796, 2, 1441797, 2, 1441798, 1, 1441799, 1, 1441800, 2, 1441801, 2, 1441802, 2, 1441803, 2, 1441804, 2, 1441805, 2, 1441806, 2, 1441807, 2, 1441808, 2, 1441809, 2, 1441810, 2, 1441811, 2, 1441812, 2, 1441813, 2, 1441814, 2, 1441815, 2, 1441816, 2, 1441817, 2, 1572858, 2, 1572859, 2, 1572860, 2, 1572861, 2, 1572862, 2, 1572863, 2, 1507328, 2, 1507329, 2, 1507330, 2, 1507331, 2, 1507332, 2, 1507333, 2, 1507334, 1, 1507335, 1, 1507336, 2, 1507337, 2, 1507338, 2, 1507339, 2, 1507340, 2, 1507341, 2, 1507342, 2, 1507343, 2, 1507344, 2, 1507345, 2, 1507346, 2, 1507347, 2, 1507348, 2, 1507349, 2, 1507350, 2, 1507351, 2, 1507352, 2, 1507353, 2, 1638394, 2, 1638395, 2, 1638396, 2, 1638397, 2, 1638398, 2, 1638399, 2, 1572864, 2, 1572865, 2, 1572866, 2, 1572867, 2, 1572868, 2, 1572869, 2, 1572870, 1, 1572871, 1, 1572872, 2, 1572873, 2, 1572874, 2, 1572875, 2, 1572876, 2, 1572877, 2, 1572878, 2, 1572879, 2, 1572880, 2, 1572881, 2, 1572882, 2, 1572883, 2, 1572884, 2, 1572885, 2, 1572886, 2, 1572887, 2, 1572888, 2, 1572889, 2, 1703930, 2, 1703931, 2, 1703932, 2, 1703933, 2, 1703934, 2, 1703935, 2, 1638400, 2, 1638401, 2, 1638402, 2, 1638403, 2, 1638404, 2, 1638405, 2, 1638406, 1, 1638407, 1, 1638408, 2, 1638409, 2, 1638410, 2, 1638411, 2, 1638412, 2, 1638413, 2, 1638414, 2, 1638415, 2, 1638416, 2, 1638417, 2, 1638418, 2, 1638419, 2, 1638420, 2, 1638421, 2, 1638422, 2, 1638423, 2, 1638424, 2, 1638425, 2, 1769466, 2, 1769467, 2, 1769468, 2, 1769469, 2, 1769470, 2, 1769471, 2, 1703936, 2, 1703937, 2, 1703938, 2, 1703939, 2, 1703940, 2, 1703941, 2, 1703942, 1, 1703943, 1, 1703944, 2, 1703945, 2, 1703946, 2, 1703947, 2, 1703948, 2, 1703949, 2, 1703950, 2, 1703951, 2, 1703952, 2, 1703953, 2, 1703954, 2, 1703955, 2, 1703956, 2, 1703957, 2, 1703958, 2, 1703959, 2, 1703960, 2, 1703961, 2, 1835002, 2, 1835003, 2, 1835004, 2, 1835005, 2, 1835006, 2, 1835007, 2, 1769472, 2, 1769473, 2, 1769474, 2, 1769475, 2, 1769476, 2, 1769477, 2, 1769478, 1, 1769479, 1, 1769480, 2, 1769481, 2, 1769482, 2, 1769483, 2, 1769484, 2, 1769485, 2, 1769486, 2, 1769487, 2, 1769488, 2, 1769489, 2, 1769490, 2, 1769491, 2, 1769492, 2, 1769493, 2, 1769494, 2, 1769495, 2, 1769496, 2, 1769497, 2 )

[node name="Players" parent="Camera/TileMap"]

editor/display_folded = false

[node name="Door1" parent="Camera/TileMap/Players" instance=ExtResource( 4 )]

transform/pos = Vector2( 576, 896 )

[node name="Door2" parent="Camera/TileMap/Players" instance=ExtResource( 4 )]

transform/pos = Vector2( 960, 448 )

[node name="An Old Man" parent="Camera/TileMap/Players" instance=ExtResource( 5 )]

transform/pos = Vector2( 960, 640 )

[node name="Treasure1" parent="Camera/TileMap/Players" instance=ExtResource( 6 )]

transform/pos = Vector2( 1088, 256 )

[node name="Back" type="Control" parent="Camera/TileMap/Scripts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 1280.0
margin/right = 512.0
margin/bottom = 1792.0

[node name="UI" parent="."]

editor/display_folded = true

[node name="SceneName" parent="UI"]

text = "A House In A Forest"


